fix(tsconfig): :art: fix error in mdx

--- a/themes/subtle/tsconfig.json
+++ b/themes/subtle/tsconfig.json
@@ -4,6 +4,8 @@
     "strictNullChecks": true,
     "allowJs": true,
     "checkJs": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "jsx": "preserve",
+    "jsxImportSource": "astro"
   }
 }
