ignore husky if not exist

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "dependencies": "monochromatic dependencies",
-    "prepare": "husky"
+    "prepare": "husky || echo 'husky does not exist, skipped'"
   },
   "engines": {
     "node": ">=22",
