--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   "devDependencies": {
     "@monochromatic-dev/config-dprint": "workspace:*",
     "@monochromatic-dev/config-stylelint": "workspace:*",
-    "dprint": ">=0.47.2",
-    "esbuild": ">=0.23.1",
-    "husky": "*",
-    "oxlint": ">=0.9.3",
-    "stylelint": ">=16.9.0",
-    "typescript": ">=5.7",
-    "vue-tsc": "*"
+    "dprint": "^0.49.0",
+    "esbuild": "^0.25.1",
+    "husky": "^9.1.7",
+    "oxlint": "^0.15.13",
+    "stylelint": "^16.15.0",
+    "typescript": "^5.8.2",
+    "vue-tsc": "^2.2.8"
   },
   "workspaces": [
     "packages/*/*"
@@ -56,5 +56,8 @@
     "glibc",
     "musl",
     "current"
-  ]
+  ],
+  "dependencies": {
+    "astro": "^5.4.2"
+  }
 }
