--- a/packages/config/npm/example.bunfig.toml
+++ b/packages/config/npm/example.bunfig.toml
@@ -6,16 +6,15 @@ telemetry = false
 # coverage = true
 
 [install]
-auto = 'force'
+auto = 'disable'
 scopes.jsr = 'https://npm.jsr.io'
-print = 'yarn'
+saveTextLockfile = true
 
 [run]
 # Always use Bun's shell
 shell = 'bun'
 
 # Auto alias node to bun
-# Abandon everything not working with Bun.
 bun = true
 
 silent = true
