--- a/packages/config/oxlint/package.json
+++ b/packages/config/oxlint/package.json
@@ -15,7 +15,8 @@
   "module": "index.json",
   "type": "module",
   "files": [
-    "index.json"
+    "index.json",
+    ".eslintignore"
   ],
   "author": {
     "name": "Aquaticat",
