--- a/bunfig.toml
+++ b/bunfig.toml
@@ -14,8 +14,7 @@ saveTextLockfile = true
 # Always use Bun's shell
 shell = 'bun'
 
-# Disabled: Auto alias node to bun
-# Astro.
-bun = false
+# Auto alias node to bun
+bun = true
 
 silent = true
