--- a/packages/config/typescript/tsconfig.dom.json
+++ b/packages/config/typescript/tsconfig.dom.json
@@ -2,5 +2,6 @@
   "extends": "@monochromatic-dev/config-typescript",
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
-  },
+    "types": ["bun", "vite/client"]
+  }
 }
