--- a/bak/packages/figma-plugin/css-variables 2025APR301628/package.json
+++ b/bak/packages/figma-plugin/css-variables 2025APR301628/package.json
@@ -9,7 +9,19 @@
     "bp": "bun run build:production",
     "build:production": "bun run build-production.ts",
     "wd": "bun run watch:development",
-    "watch:development": "bun run watch-development.ts"
+    "watch:development": "bun run watch-development.ts",
+    "bbp": "bun run build:backend:production",
+    "build:backend:production": "vite build --config vite.config.backend.ts --mode production",
+    "bfp": "bun run build:frontend:production",
+    "build:frontend:production": "vite build --config vite.config.frontend.ts --mode production",
+    "bbd": "bun run build:backend:development",
+    "build:backend:development": "vite build --config vite.config.backend.ts --mode development",
+    "wbp": "bun run watch:backend:production",
+    "watch:backend:production": "vite build --config vite.config.backend.ts --watch --mode production",
+    "wbd": "bun run watch:backend:development",
+    "watch:backend:development": "vite build --config vite.config.backend.ts --watch --mode development",
+    "wfd": "bun run watch:frontend:development",
+    "watch:frontend:development": "vite build --config vite.config.frontend.ts --watch --mode development"
   },
   "author": "",
   "license": "",
