--- a/bak/2025-05-05T040612.627Z/pnpm-workspace.yaml
+++ b/bak/2025-05-05T040612.627Z/pnpm-workspace.yaml
@@ -14,7 +14,6 @@ onlyBuiltDependencies:
 - dprint
 - esbuild
 - sharp
-- husky
 preferWorkspacePackages: true
 resolutionMode: highest
 savePrefix: ''
@@ -187,11 +186,11 @@ catalog:
   # MDX with Vue
   '@mdx-js/vue': '*'
   'vue': '*'
-
-overrides:
-  'tsconfck>typescript': '*'
-  'zod-to-ts>typescript': '*'
 packageExtensions:
-  'astro':
-    dependencies:
-      typescript: '*'
+  # Astro packages
+  'tsconfck@*':
+    peerDependencies:
+      'typescript': '*'
+  zod-to-ts:
+    peerDependencies:
+      'typescript': '*'
