--- a/bak/2025-05-05T041043.410Z/pnpm-workspace.yaml
+++ b/bak/2025-05-05T041043.410Z/pnpm-workspace.yaml
@@ -14,7 +14,6 @@ onlyBuiltDependencies:
 - dprint
 - esbuild
 - sharp
-- husky
 preferWorkspacePackages: true
 resolutionMode: highest
 savePrefix: ''
@@ -187,10 +186,16 @@ catalog:
   # MDX with Vue
   '@mdx-js/vue': '*'
   'vue': '*'
-
 overrides:
+  # Astro packages
   'tsconfck>typescript': '*'
   'zod-to-ts>typescript': '*'
+#    peerDependencies:
+#      'typescript': '*'
+#  'zod-to-ts@*':
+#    peerDependencies:
+#      'typescript': '*'
+
 packageExtensions:
   'astro':
     dependencies:
