Replaced hardcoded dependencies with catalog protocol for consistency. Refactored color parsing, variable handling, and CSS processes. Introduced optimized build scripts, improved TypeScript configurations

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "husky"
   ],
   "scripts": {
-    "prepare": "husky || echo 'husky does not exist, skipped'",
+    "data-prepare": "husky || echo 'husky does not exist, skipped'",
     "preinstall": "npx only-allow pnpm"
   },
   "engines": {
