--- a/packages/config/browserslist/package.json
+++ b/packages/config/browserslist/package.json
@@ -25,6 +25,6 @@
     "directory": "packages/config/browserslist"
   },
   "peerDependencies": {
-    "browserslist": "*"
+    "browserslist": "catalog:"
   }
 }
