--- a/packages/figma-plugin/css-variables/package.json
+++ b/packages/figma-plugin/css-variables/package.json
@@ -6,57 +6,66 @@
   "module": "dist/final/backend/index.iife.js",
   "type": "module",
   "scripts": {
-    "bp": "bun run build:production",
+    "bp": "pnpm run build:production",
     "build:production": "bun run build-production.ts",
-    "wd": "bun run watch:development",
+    "wd": "pnpm run watch:development",
     "watch:development": "bun run watch-development.ts"
   },
-  "author": "",
-  "license": "",
+  "author": {
+    "name": "Aquaticat",
+    "email": "an@aquati.cat",
+    "url": "https://aquati.cat"
+  },
+  "license": "Apache-2.0",
+  "private": true,
   "devDependencies": {
-    "@figma/plugin-typings": "*",
+    "execa": "catalog:",
+    "nano-spawn": "catalog:",
+    "@cspotcode/outdent": "catalog:",
+    "@types/bun": "catalog:",
+    "@figma/plugin-typings": "catalog:",
     "@monochromatic-dev/config-typescript": "workspace:*",
     "@monochromatic-dev/config-vite": "workspace:*",
     "@monochromatic-dev/module-es": "workspace:*",
-    "vite": ">=6.3.2",
-    "lightningcss": ">=1.29.3",
-    "postcss-nesting": ">=13.0.1",
-    "postcss-calc": ">=10.1.1",
-    "postcss-custom-properties": "*",
-    "postcss": ">=8.5.3",
-    "@csstools/postcss-color-mix-function": ">=3.0.9",
-    "@csstools/postcss-relative-color-syntax": "*",
-    "@csstools/postcss-oklab-function": "*",
-    "@csstools/postcss-light-dark-function": "*",
-    "@csstools/postcss-gradients-interpolation-method": "*",
-    "postcss-color-functional-notation": "*",
-    "@csstools/postcss-contrast-color-function": "*",
-    "postcss-color-hex-alpha": "*",
-    "@csstools/postcss-color-function": "*",
-    "@csstools/postcss-extract": "*",
-    "postcss-convert-values": "*",
-    "postcss-discard-comments": "*",
-    "postcss-discard-duplicates": "*",
-    "postcss-discard-empty": "*",
-    "postcss-discard-overridden": "*",
-    "postcss-discard-unused": "*",
-    "postcss-merge-idents": "*",
-    "postcss-merge-longhand": "*",
-    "postcss-merge-rules": "*",
-    "postcss-minify-font-values": "*",
-    "postcss-minify-gradients": "*",
-    "postcss-minify-params": "*",
-    "postcss-minify-selectors": "*",
-    "postcss-normalize-charset": "*",
-    "postcss-normalize-display-values": "*",
-    "postcss-normalize-positions": "*",
-    "postcss-normalize-repeat-style": "*",
-    "postcss-normalize-string": "*",
-    "postcss-normalize-timing-functions": "*",
-    "postcss-normalize-unicode": "*",
-    "postcss-normalize-url": "*",
-    "postcss-normalize-whitespace": "*",
-    "postcss-ordered-values": "*",
-    "lfi": ">=3.8.0"
+    "vite": "catalog:",
+    "lightningcss": "catalog:",
+    "postcss-nesting": "catalog:",
+    "postcss-calc": "catalog:",
+    "postcss-custom-properties": "catalog:",
+    "postcss": "catalog:",
+    "@csstools/postcss-color-mix-function": "catalog:",
+    "@csstools/postcss-relative-color-syntax": "catalog:",
+    "@csstools/postcss-oklab-function": "catalog:",
+    "@csstools/postcss-light-dark-function": "catalog:",
+    "@csstools/postcss-gradients-interpolation-method": "catalog:",
+    "postcss-color-functional-notation": "catalog:",
+    "@csstools/postcss-contrast-color-function": "catalog:",
+    "postcss-color-hex-alpha": "catalog:",
+    "@csstools/postcss-color-function": "catalog:",
+    "@csstools/postcss-extract": "catalog:",
+    "postcss-convert-values": "catalog:",
+    "postcss-discard-comments": "catalog:",
+    "postcss-discard-duplicates": "catalog:",
+    "postcss-discard-empty": "catalog:",
+    "postcss-discard-overridden": "catalog:",
+    "postcss-discard-unused": "catalog:",
+    "postcss-merge-idents": "catalog:",
+    "postcss-merge-longhand": "catalog:",
+    "postcss-merge-rules": "catalog:",
+    "postcss-minify-font-values": "catalog:",
+    "postcss-minify-gradients": "catalog:",
+    "postcss-minify-params": "catalog:",
+    "postcss-minify-selectors": "catalog:",
+    "postcss-normalize-charset": "catalog:",
+    "postcss-normalize-display-values": "catalog:",
+    "postcss-normalize-positions": "catalog:",
+    "postcss-normalize-repeat-style": "catalog:",
+    "postcss-normalize-string": "catalog:",
+    "postcss-normalize-timing-functions": "catalog:",
+    "postcss-normalize-unicode": "catalog:",
+    "postcss-normalize-url": "catalog:",
+    "postcss-normalize-whitespace": "catalog:",
+    "postcss-ordered-values": "catalog:",
+    "lfi": "catalog:"
   }
 }
