--- a/packages/config/stylelint/package.json
+++ b/packages/config/stylelint/package.json
@@ -6,15 +6,15 @@
     "monochromatic"
   ],
   "peerDependencies": {
-    "stylelint": "*",
-    "postcss-html": ">=1.8.0"
+    "stylelint": "catalog:",
+    "postcss-html": "catalog:"
   },
   "dependencies": {
-    "stylelint-config-standard": "*",
-    "postcss-html": ">=1.8.0"
+    "stylelint-config-standard": "catalog:",
+    "postcss-html": "catalog:"
   },
   "devDependencies": {
-    "stylelint": "*"
+    "stylelint": "catalog:"
   },
   "main": "index.mjs",
   "module": "index.mjs",
