--- a/packages/module/es/package.json
+++ b/packages/module/es/package.json
@@ -18,11 +18,11 @@
   ],
   "devDependencies": {
     "@monochromatic-dev/config-typescript": "workspace:*",
-    "type-fest": ">=4.24.0"
+    "type-fest": "catalog:"
   },
   "dependencies": {
-    "@logtape/logtape": "jsr:*",
-    "@logtape/file": "jsr:*"
+    "@logtape/logtape": "catalog:",
+    "@logtape/file": "catalog:"
   },
   "version": "0.0.125",
   "repository": {
