--- a/packages/style/monochromatic/package.json
+++ b/packages/style/monochromatic/package.json
@@ -8,13 +8,13 @@
   "main": "src/index.css",
   "devDependencies": {
     "@monochromatic-dev/config-typescript": "workspace:*",
-    "@types/mdx": "*",
-    "@types/bun": "*"
+    "@types/mdx": "catalog:",
+    "@types/bun": "catalog:"
   },
   "version": "0.1.0",
   "dependencies": {
-    "the-new-css-reset": ">=1.11.2",
-    "TODS": "github:clagnut/TODS"
+    "the-new-css-reset": "catalog:",
+    "TODS": "catalog:"
   },
   "exports": {
     "./.css": "src/index.css",
