--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,98 +1,29 @@
 packages:
 - packages/*/*
-childConcurrency: 16
-dedupeDirectDeps: true
-disallowWorkspaceCycles: true
-hoist: false
-hoistWorkspacePackages: false
-includeWorkspaceRoot: true
-linkWorkspacePackages: true
 autoInstallPeers: false
-managePackageManagerVersions: false
-nodeLinker: isolated
-onlyBuiltDependencies:
-- dprint
-- esbuild
-- sharp
-- husky
-preferWorkspacePackages: true
-resolutionMode: highest
-savePrefix: ''
-saveWorkspaceProtocol: false
-strictDepBuilds: true
-strictPeerDependencies: true
-supportedArchitectures:
-  os: [win32, darwin, linux, current]
-  cpu: [x64, arm64, current]
-  libc: [glibc, musl, current]
-verifyDepsBeforeRun: install
-shellEmulator: true
 catalog:
-  # Resolve to a set of browsers to support
-  'browserslist': '*'
-
-  # Type checker
+  browserslist: '*'
   zod: '*'
-
-  # Faster, more customizable formatter than prettier.
   dprint: '*'
-
-  # MAYBE: Deprecate this package. Switch to Vite.
   esbuild: '*'
-
-  # Git commit hooks
   husky: '*'
-
-  # Faster linter than eslint.
   oxlint: '*'
-
-  # Comprehensive linter for CSS.
   stylelint: '*'
   stylelint-config-standard: '*'
-
   typescript: '*'
-
-  # MAYBE: Investigate if Vue is needed.
   vue-tsc: '*'
-
-  # For serializing data to fs.
   '@ungap/structured-clone': '*'
-
-  # Find files in parent directories
   find-up: '*'
-
-  # Glob implementation that works.
   glob: '*'
-
-  # Faster, more extensive resolver than lightningcss's built-in resolver.
   oxc-resolver: '*'
-
-  # TOML parser.
   smol-toml: '*'
-
-  # TODO: Deprecate this package. Switch to gunshi
   zod-opts: '*'
-
-  # For building command line apps
-  '@kazupon/gunshi': 'jsr:*'
-
-  # types for Bun because we're using Bun.
+  '@kazupon/gunshi': jsr:*
   '@types/bun': '*'
-
-  # For postcss processing in Astro files
   postcss-html: '*'
-
-  # For MDX usage in Astro
-  # TODO: Check if this is needed.
   '@types/mdx': '*'
-
-  # Feature-complete bundler
   vite: '*'
-
-  # Enforce everything to be in one file when using Vite
   vite-plugin-singlefile: '*'
-
-  # PostCSS syntax lowering
   '@csstools/postcss-color-function': '*'
   '@csstools/postcss-color-mix-function': '*'
   '@csstools/postcss-contrast-color-function': '*'
@@ -102,75 +33,51 @@ catalog:
   '@csstools/postcss-oklab-function': '*'
   '@csstools/postcss-relative-color-syntax': '*'
   '@csstools/custom-units': '*'
-  'postcss-calc': '*'
-  'postcss-color-functional-notation': '*'
-  'postcss-color-hex-alpha': '*'
-  'postcss-convert-values': '*'
-  'postcss-custom-properties': '*'
-  'postcss-custom-media': '*'
-  'postcss-custom-selectors': '*'
-  'postcss-discard-comments': '*'
-  'postcss-discard-duplicates': '*'
-  'postcss-discard-empty': '*'
-  'postcss-discard-overridden': '*'
-  'postcss-discard-unused': '*'
-  'postcss-merge-idents': '*'
-  'postcss-merge-longhand': '*'
-  'postcss-merge-rules': '*'
-  'postcss-minify-font-values': '*'
-  'postcss-minify-gradients': '*'
-  'postcss-minify-params': '*'
-  'postcss-minify-selectors': '*'
-  'postcss-mixins': '*'
-  'postcss-nesting': '*'
-  'postcss-normalize-charset': '*'
-  'postcss-normalize-display-values': '*'
-  'postcss-normalize-positions': '*'
-  'postcss-normalize-repeat-style': '*'
-  'postcss-normalize-string': '*'
-  'postcss-normalize-timing-functions': '*'
-  'postcss-normalize-unicode': '*'
-  'postcss-normalize-url': '*'
-  'postcss-normalize-whitespace': '*'
-  'postcss-ordered-values': '*'
-
-  # Figma plugin types
+  postcss-calc: '*'
+  postcss-color-functional-notation: '*'
+  postcss-color-hex-alpha: '*'
+  postcss-convert-values: '*'
+  postcss-custom-properties: '*'
+  postcss-custom-media: '*'
+  postcss-custom-selectors: '*'
+  postcss-discard-comments: '*'
+  postcss-discard-duplicates: '*'
+  postcss-discard-empty: '*'
+  postcss-discard-overridden: '*'
+  postcss-discard-unused: '*'
+  postcss-merge-idents: '*'
+  postcss-merge-longhand: '*'
+  postcss-merge-rules: '*'
+  postcss-minify-font-values: '*'
+  postcss-minify-gradients: '*'
+  postcss-minify-params: '*'
+  postcss-minify-selectors: '*'
+  postcss-mixins: '*'
+  postcss-nesting: '*'
+  postcss-normalize-charset: '*'
+  postcss-normalize-display-values: '*'
+  postcss-normalize-positions: '*'
+  postcss-normalize-repeat-style: '*'
+  postcss-normalize-string: '*'
+  postcss-normalize-timing-functions: '*'
+  postcss-normalize-unicode: '*'
+  postcss-normalize-url: '*'
+  postcss-normalize-whitespace: '*'
+  postcss-ordered-values: '*'
   '@figma/plugin-typings': '*'
-
-  # Concurrency lib
-  'lfi': '*'
-
-  # Fast CSS lib
+  lfi: '*'
   lightningcss: '*'
-
-  # Feature-complete CSS lib
   postcss: '*'
-
-  # Logger
-  '@logtape/logtape': 'jsr:*'
-  '@logtape/file': 'jsr:*'
-
-  # TypeScript extended type helpers
-  'type-fest': '*'
-
-  # Feature-complete child process
-  'execa': '*'
-
-  # Small process spawner
-  'nano-spawn': '*'
-
-  # Astro
+  '@logtape/logtape': jsr:>=0.9.1
+  '@logtape/file': jsr:>=0.9.1
+  type-fest: '*'
+  execa: '*'
+  nano-spawn: '*'
   astro: '*'
   '@astrojs/mdx': '*'
   '@astrojs/rss': '*'
-
-  # Syntax highlighter
   '@shikijs/transformers': '>=3.3.0'
-
-  # local HTTPS server
   '@vitejs/plugin-basic-ssl': '*'
-
-  # Unified
   unified: '*'
   to-vfile: '*'
   remark-github-blockquote-alert: '*'
@@ -180,28 +87,46 @@ catalog:
   rehype-preset-minify: '*'
   rehype-parse: '*'
   rehype-autolink-headings: '*'
-
-  # fp library
   rambdax: '*'
-
-  # Secure code execution environment
   ses: '*'
-
-  # CSS reset
   the-new-css-reset: '*'
-  TODS: 'github:clagnut/TODS'
-
-  # MDX with Vue
+  TODS: github:clagnut/TODS
   '@mdx-js/vue': '*'
-  'vue': '*'
-
-  # Remove spaces from template strings
-  '@cspotcode/outdent': 'jsr:*'
-
+  vue: '*'
+  '@cspotcode/outdent': jsr:*
+childConcurrency: 16
+dedupeDirectDeps: true
+disallowWorkspaceCycles: true
+hoist: false
+hoistWorkspacePackages: false
+includeWorkspaceRoot: true
+linkWorkspacePackages: true
+managePackageManagerVersions: false
+nodeLinker: isolated
+onlyBuiltDependencies:
+- dprint
+- esbuild
+- sharp
+- husky
 overrides:
-  'tsconfck>typescript': '*'
-  'zod-to-ts>typescript': '*'
+  tsconfck>typescript: '*'
+  zod-to-ts>typescript: '*'
 packageExtensions:
-  'astro':
+  astro:
     dependencies:
       typescript: '*'
+patchedDependencies:
+  # Logtape is not working for Bun due to a Deno-specific code fragment at the moment. See https://github.com/dahlia/logtape/issues/42
+  '@jsr/logtape__logtape@0.9.1': patches/@jsr__logtape__logtape@0.9.1.patch
+preferWorkspacePackages: true
+resolutionMode: highest
+savePrefix: ''
+saveWorkspaceProtocol: false
+shellEmulator: true
+strictDepBuilds: true
+strictPeerDependencies: true
+supportedArchitectures:
+  os: [win32, darwin, linux, current]
+  cpu: [x64, arm64, current]
+  libc: [glibc, musl, current]
+verifyDepsBeforeRun: install
