--- a/.eslintignore
+++ b/.eslintignore
@@ -6,14 +6,7 @@ dist
 
 node_modules
 .jj
-.dist/dev
-**/dist/dev
-.dist/temp
-**/.dist/temp
-dist/dev
-**/dist/dev
-dist/temp
-**/dist/temp
+.dist
 *.tsbuildinfo
 *.map
 .bin
