--- a/packages/config/typescript/tsconfig.json
+++ b/packages/config/typescript/tsconfig.json
@@ -27,6 +27,8 @@
 
     "noUncheckedSideEffectImports": true,
 
+    "preserveWatchOutput": true,
+
     //region Modules
 
     "allowImportingTsExtensions": true,
