--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -1,33 +1,24 @@
 {
-  "name": "@monochromatic-dev/config-vite",
+  "name": "@monochromatic-dev/config-eslint",
   "keywords": [
-    "vite",
+    "eslint",
     "config",
     "monochromatic"
   ],
   "dependencies": {
-    "vite-plugin-singlefile": "catalog:",
-    "lightningcss": "catalog:",
-    "esbuild": "catalog:"
+    "typescript-eslint": "catalog:"
   },
   "peerDependencies": {
-    "vite": "catalog:",
-    "vitest": "catalog:",
-    "lightningcss": "catalog:"
+    "eslint": "catalog:"
   },
   "devDependencies": {
+    "@eslint/js": "catalog:",
+    "eslint-plugin-oxlint": "catalog:",
     "vite": "catalog:",
     "@monochromatic-dev/config-typescript": "*",
-    "vitest": "catalog:",
-    "@types/bun": "catalog:",
-    "@types/postcss-mixins": "catalog:",
-    "nano-spawn": "catalog:",
-    "postcss-mixins": "catalog:",
-    "@csstools/custom-units": "catalog:",
-    "postcss-custom-media": "catalog:",
-    "postcss-custom-selectors": "catalog:",
-    "vite-plugin-json5": "catalog:",
-    "postcss": "catalog:"
+    "@monochromatic-dev/config-vite": "*",
+    "@monochromatic-dev/config-oxlint": "*",
+    "@types/bun": "catalog:"
   },
   "type": "module",
   "files": [
@@ -51,7 +42,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Aquaticat/Monochromatic.git",
-    "directory": "packages/config/vite"
+    "directory": "packages/config/eslint"
   },
   "exports": {
     ".": {
