--- a/packages/module/es/package.json
+++ b/packages/module/es/package.json
@@ -15,11 +15,19 @@
     },
     "./.js": {
       "types": "./dist/final/types/src/index.d.ts",
-      "default": "./dist/final/index.js"
+      "default": "./dist/final/js/index.js"
     },
     "./logtape.ts": {
       "node": "./src/logtape.node.ts",
       "default": "./src/logtape.default.ts"
+    },
+    "./fs.ts": {
+      "node": "./src/fs.node.ts",
+      "default": "./src/fs.default.ts"
+    },
+    "./fs.fs.ts": {
+      "node": "./src/fs.fs.node.ts",
+      "default": "./src/fs.fs.default.ts"
     }
   },
   "scripts": {
@@ -51,7 +59,8 @@
     "lfi": "catalog:",
     "nano-spawn": "catalog:",
     "@total-typescript/ts-reset": "catalog:",
-    "ts-pattern": "catalog:"
+    "ts-pattern": "catalog:",
+    "happy-opfs": "catalog:"
   },
   "dependencies": {
   },
