--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -98,15 +98,24 @@ catalog:
   # Promising fp lib that supports concurrency.
   '@fxts/core': '*'
   # Fast, concurrent testing framework
-  vitest: '>=3.1.3'
+  vitest: '>=3.2.0-beta.1'
   # Type checker used by Vitest that supports Vue
   'vue-tsc': '>=2.2.10'
-  '@vitest/coverage-v8': '*'
-  '@vitest/coverage-istanbul': '*'
+  '@vitest/coverage-v8': '>=3.2.0-beta.1'
+  '@vitest/coverage-istanbul': '>=3.2.0-beta.1'
   '@total-typescript/ts-reset': '*'
   '@types/postcss-mixins': '*'
   'ts-pattern': '*'
   'oxc-minify': '*'
+  'memfs': '>=4.17.2'
+  'happy-opfs': '>=1.8.6'
+  'eslint-p': '>=0.23.0'
+  'eslint-plugin-oxlint': '>=0.16.11'
+  'jiti': '>=2.4.2'
+  'eslint': '>=9.27.0'
+  '@eslint/js': '>=9.27.0'
+  'typescript-eslint': '>=8.32.1'
+  'vite-plugin-json5': '>=1.1.9'
 childConcurrency: 16
 dedupeDirectDeps: true
 disallowWorkspaceCycles: true
