--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "scripts": {
     "data-prepare": "husky || echo 'husky does not exist, skipped'",
     "preinstall": "npx only-allow pnpm",
-    "w:test": "vitest",
-    "b:test": "vitest --run",
+    "w:test": "vitest watch",
+    "b:test": "vitest run",
     "w:bench-slow": "vitest bench",
     "b:bench-slow": "vitest bench --run",
-    "wr": "pnpm run -r --parallel --stream '/^w:\\w+$/'",
-    "br": "pnpm run -r --stream '/^b:\\w+$/'"
+    "wr": "pnpm run -r --parallel --stream \"/^w:\\w+$/\"",
+    "br": "pnpm run -r --stream \"/^b:\\w+$/\""
   },
   "engines": {
     "bun": ">=1.2.9"
@@ -45,6 +45,8 @@
     "vue-tsc": "catalog:",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/coverage-istanbul": "catalog:",
+    "@vitest/browser": "catalog:",
+    "playwright": "catalog:",
     "vite": "catalog:",
     "@types/bun": "catalog:",
     "nano-spawn": "catalog:",
