--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -18,7 +18,8 @@
     "@monochromatic-dev/config-typescript": "*",
     "@monochromatic-dev/config-vite": "*",
     "@monochromatic-dev/config-oxlint": "*",
-    "@types/bun": "catalog:"
+    "@types/bun": "catalog:",
+    "@vitest/browser": "catalog:"
   },
   "type": "module",
   "files": [
@@ -33,8 +34,8 @@
   "scripts": {
     "w:types": "tsc --watch",
     "b:types": "tsc",
-    "w:js": "vite build --watch",
-    "b:js": "vite build",
+    "w:js": "vite build --config vite.config.ts  --watch",
+    "b:js": "vite build  --config vite.config.ts ",
     "b": "pnpm run --stream '/^b:\\w+$/'",
     "w": "pnpm run --stream '/^w:\\w+$/'"
   },
