--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,7 +7,7 @@ catalog:
   dprint: '*'
   esbuild: '*'
   husky: '*'
-  oxlint: '*'
+  oxlint: '>=0.17.0'
   stylelint: '*'
   stylelint-config-standard: '*'
   typescript: '*'
@@ -99,13 +99,13 @@ catalog:
   # Promising fp lib that supports concurrency.
   '@fxts/core': '*'
   # Fast, concurrent testing framework
-  vitest: '>=3.2.0-beta.2'
+  vitest: '>=3.2.0-beta.3'
   # Type checker used by Vitest that supports Vue
   'vue-tsc': '>=2.2.10'
-  '@vitest/browser': '>=3.2.0-beta.2'
+  '@vitest/browser': '>=3.2.0-beta.3'
   'playwright': '>=1.52.0'
-  '@vitest/coverage-v8': '>=3.2.0-beta.2'
-  '@vitest/coverage-istanbul': '>=3.2.0-beta.2'
+  '@vitest/coverage-v8': '>=3.2.0-beta.3'
+  '@vitest/coverage-istanbul': '>=3.2.0-beta.3'
   '@total-typescript/ts-reset': '*'
   '@types/postcss-mixins': '*'
   'ts-pattern': '*'
@@ -120,6 +120,17 @@ catalog:
   'typescript-eslint': '>=8.32.1'
   'vite-plugin-json5': '>=1.1.9'
   'happy-rusty': '*'
+  # Install directly from GitHub for TypeScript support
+  # Edit: Not using it. Too outdated.
+  # 'eslint-plugin-import': github:import-js/eslint-plugin-import
+  'eslint-plugin-jsdoc': '>=50.6.17'
+  'eslint-plugin-n': '>=17.18.0'
+  # Does not support TypeScript yet.
+  #  'eslint-plugin-promise': '>=7.2.1'
+  '@vitest/eslint-plugin': '>=1.2.1'
+  'eslint-plugin-unicorn': '>=59.0.1'
+  'eslint-plugin-astro': '>=1.3.1'
+  'eslint-plugin-jsx-a11y': '>=6.10.2'
 childConcurrency: 16
 dedupeDirectDeps: true
 disallowWorkspaceCycles: true
