--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "data-prepare": "husky || echo 'husky does not exist, skipped'",
     "preinstall": "npx only-allow pnpm",
-    "w:test": "vitest watch",
+    "//w:test-slow": "# vitest is too slow when run in watch mode inside pnpm run wr. Disabled Vitest in pnpm run wr by adding the hyphen character. Suggestion: Run vitest separately or in your IDE.",
+    "w:test-slow": "vitest watch",
     "b:test": "vitest run",
     "w:bench-slow": "vitest bench",
     "b:bench-slow": "vitest bench --run",
