--- a/packages/module/es/package.json
+++ b/packages/module/es/package.json
@@ -48,8 +48,8 @@
     "w:js_node": "vite build --config vite.config.ts --mode production,node --watch",
     "b:js_browser": "vite build --config vite.config.ts --mode production,browser",
     "w:js_browser": "vite build --config vite.config.ts --mode production,browser --watch",
-    "b": "pnpm run --stream '/^b:\\w+$/'",
-    "w": "pnpm run --stream '/^w:\\w+$/'"
+    "b": "pnpm run --stream \"/^b:\\w+$/\"",
+    "w": "pnpm run --stream \"/^w:\\w+$/\""
   },
   "files": [
     "dist/final",
